--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,21 @@
   <div class="header-top">
     <div class="container">
       <div class="logo">
-        <a href="index.html">Luxury <span>resorts</span></a>
+        <a href="index.html">Luxury <span>home</span></a>
       </div>
       <div class="top-menu">
         <span class="menu"><img src="assets/images/nav.png" alt="" /> </span>
         <ul>
           <nav class="cl-effect-3">
-            <li><a href="#home" class="active scroll">home</a></li>
-            <li><a href="#aboutus" class="scroll">about us</a></li>
-            <li><a href="#services" class="scroll">services</a></li>
-            <li><a href="#gallery" class="scroll">gallery</a></li>
-            <li><a href="#reviews" class="scroll">reviews</a></li>
-            <li><a href="#pricing" class="scroll">pricing</a></li>
-            <li><a href="#blog" class="scroll">blog</a></li>
-            <li><a href="#contact" class="scroll">contact</a></li>
+            <li><a href="#home" class="active scroll">inicio</a></li>
+            <li><a href="#aboutus" class="scroll">acerca de</a></li>
+            <li><a href="#services" class="scroll">servicios</a></li>
+            <li><a href="#gallery" class="scroll">galeria</a></li>
+            <li><a href="#reviews" class="scroll">personal</a></li>
+            <li><a href="#pricing" class="scroll">Precios</a></li>
+            <li><a href="#reservar" class="scroll">reservar</a></li>
+            <li><a href="#contactos" class="scroll">contactos</a></li>
+           
           </nav>
         </ul>
       </div>
@@ -62,36 +63,36 @@
 <div class="content">
   <div class="about-section" id="aboutus">
     <div class="container">
-      <h3>about <span>us</span></h3>
+      <h3>acerca <span>de</span></h3>
       <div class="about-grids">
         <div class="col-md-3 about-grid">
           <img src="assets/images/page1_img1.jpg">
-          <h4>Wellness& <span>Spa</span></h4>
+          <h4>Bienestar</h4>
           <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
         <div class="col-md-3 about-grid">
           <img src="assets/images/page1_img2.jpg">
-          <h4>Room& <span>Rates</span></h4>
+          <h4>Habitaciones</h4>
           <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
         <div class="col-md-3 about-grid">
           <img src="assets/images/page1_img3.jpg">
-          <h4>Spa& <span>Repair</span></h4>
+          <h4>Guías</h4>
           <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
         <div class="col-md-3 about-grid">
           <img src="assets/images/page1_img4.jpg">
-          <h4>Environmental&<span>Restaurant</span></h4>
+          <h4>Ambiente<span>Natural</span></h4>
           <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </div>
         <div class="clearfix"></div>
       </div>
-      <a class="button hvr-shutter-in-vertical" href="#">read more</a>
+      <a class="button hvr-shutter-in-vertical" href="#">leer más</a>
     </div>
   </div>
   <div class="services-section" id="services">
     <div class="container">
-      <h3>our <span>services</span></h3>
+      <h3>Otros <span>servicios</span></h3>
       <div class="services-grids">
         <div class="col-md-6 service-leftgrid">
           <div class="service1">
@@ -99,8 +100,8 @@
               <h4>01</h4>
             </div>
             <div class="left-grid2">
-              <h4>Regal and Baquacil Chemicals </h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
+              <h4>Transporte</h4>
+              <p>Ofrecemos servicios de recogida y entrega en el aeropuerto.</p>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -109,8 +110,8 @@
               <h4>02</h4>
             </div>
             <div class="left-grid2">
-              <h4>Repairs and Equipment Upgrades</h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
+              <h4>Seguridad</h4>
+              <p>Nuestro hogar cuenta con sistema de vigilancia.</p>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -119,8 +120,8 @@
               <h4>03</h4>
             </div>
             <div class="left-grid2">
-              <h4>Complete Service & Parts Department </h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
+              <h4>Wifi </h4>
+              <p>Puede acceder a internet desde nuestro hogar a cualquier hora del día.</p>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -131,39 +132,19 @@
               <h4>04</h4>
             </div>
             <div class="left-grid2">
-              <h4>Decking - concrete & Kool Deck </h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
+              <h4>Climatización</h4>
+              <p>Contamos con equipos de clima para agradar su estancia en sus habitaciones.</p>
             </div>
             <div class="clearfix"></div>
           </div>
-          <div class="service2">
-            <div class="left-grid1">
-              <h4>05</h4>
-            </div>
-            <div class="left-grid2">
-              <h4>Professional pool cleaning service </h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
-            </div>
-            <div class="clearfix"></div>
           </div>
-          <div class="service1">
-            <div class="left-grid1">
-              <h4>06</h4>
-            </div>
-            <div class="left-grid2">
-              <h4>LOREM IPSUM DOLOR SIT AMET </h4>
-              <p>How wonderful it is that nobody need wait a singlemoment before starting to improve the world.</p>
-            </div>
-            <div class="clearfix"> </div>
-          </div>
-        </div>
         <div class="clearfix"> </div>
 
       </div>
     </div>
   </div>
   <div class="gallery-section" id="gallery">
-    <h3>Gall<span>ery</span></h3>
+    <h3>Gal<span>ería</span></h3>
     <div class="gallery-grids">
       <div class="col-md-2 gallery-grid">
         <div class="gallery-grid1">
@@ -210,7 +191,7 @@
   <div class="price-section" id="pricing">
     <div class="price-tables">
       <div class="container">
-        <h3>our <span>price</span></h3>
+        <h3>Pre<span>cios</span></h3>
         <div class="price-table-grids">
           <div class="price-table-grid price-table-grid1">
             <div class="price-table-grid-head price-table-grid-head1">
@@ -234,8 +215,7 @@
                 <li>
                   <p><span> </span>lorem ipusm dolor sit amet</p>
                 </li>
-                <a class="btn1 hvr-shutter-in-vertical" href="#">Booking</a>
-                <div class="clear"> </div>
+                 <div class="clear"> </div>
               </ul>
 
             </div>
@@ -262,8 +242,7 @@
                 <li>
                   <p><span> </span>lorem ipusm dolor sit amet</p>
                 </li>
-                <a class="btn1 btn2 hvr-shutter-in-vertical " href="#">Booking</a>
-                <div class="clear"> </div>
+                 <div class="clear"> </div>
               </ul>
 
             </div>
@@ -290,7 +269,6 @@
                 <li>
                   <p><span> </span>lorem ipusm dolor sit amet</p>
                 </li>
-                <a class="btn1 btn3 hvr-shutter-in-vertical" href="#">Booking</a>
                 <div class="clear"> </div>
               </ul>
 
@@ -304,97 +282,68 @@
   </div>
   <!----//End-price-tables----->
   <div class="team-section" id="reviews">
-    <h3>Revi<span>ews</span></h3>
+    <h3>Per<span>sonal</span></h3>
     <div class="slider1">
       <div class="callbacks_container">
         <ul class="rslides" id="slider1">
           <li>
-            <img src="assets/images/side-1.png" alt="" />
+            <img src="assets/images/maye.png" alt="" />
             <div class="caption caption1">
-              <h4>john doe</h4>
-              <p>It’s good to have everything sorted. Taasky offers categories which can filter your tasks in a very simple manner. Every category has its own colour to avoid chaos.</p>
+              <h4>mayelin mugercia</h4>
+              <p>Propietaria del hogar. Domina el inglés y el aleman.</p>
             </div>
           </li>
           <li>
             <img src="assets/images/side-2.png" alt="" />
             <div class="caption caption1">
-              <h4>Robert Smith</h4>
-              <p>It’s good to have everything sorted. Taasky offers categories which can filter your tasks in a very simple manner. Every category has its own colour to avoid chaos.</p>
+              <h4>Alito</h4>
+              <p>Chofer</p>
             </div>
           </li>
           <li>
             <img src="assets/images/side-3.png" alt="" />
             <div class="caption caption1">
-              <h4> Steve Smith </h4>
-              <p>Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutem. Lorem ipsum dolor sit amet, conectetu er adipiscing elit.vestibulum.</p>
+              <h4> martha </h4>
+              <p>cocinera</p>
             </div>
           </li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="blog-section" id="blog">
+  <div class="blog-section" id="reservar">
     <div class="container">
-      <h3>bl<span>og</span></h3>
-      <div class="blog-grid">
-        <div class="col-md-6 blog-leftgtid">
-          <div class="blog-grid">
-            <a href="single.html"><img src="assets/images/pic1.jpg" /></a>
-            <a href="single.html">SED UT PERSPICIATIS UNDE</a>
-            <p class="date">02-01-15 by <a href="#">Finibus Bonorum</a></p>
-            <p>Praesent vestim molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+      <h3>reser<span>var</span></h3>
+      <div >
+       <app-reservas></app-reservas>   
           </div>
-          <div class="blog-grid1">
-            <a href="single.html"><img src="assets/images/pic2.jpg" /></a>
-            <a href="single.html">DONEC SAGITTIS EUISMOD PURUS</a>
-            <p class="date">09-02-15 by <a href="#">Finibus Bonorum</a></p>
-            <p>Praesent vestim molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-          </div>
-        </div>
-        <div class="col-md-6 blog-rightgtid">
-          <div class="blog-grid">
-            <a href="single.html"><img src="assets/images/pic3.jpg" /></a>
-            <a href="single.html">SED UT PERSPICIATIS UNDE</a>
-            <p class="date">19-01-15 by <a href="#">Finibus Bonorum</a></p>
-            <p>Praesent vestim molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-          </div>
-          <div class="blog-grid1">
-            <a href="single.html"><img src="assets/images/pic4.jpg" /></a>
-            <a href="single.html">DONEC SAGITTIS EUISMOD PURUS</a>
-            <p class="date">29-02-15 by <a href="#">Finibus Bonorum</a></p>
-            <p>Praesent vestim molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-          </div>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
     </div>
   </div>
-  <div class="contact-section" id="contact">
+  <div class="contact-section" id="contactos">
     <div class="container">
-      <h3>contact <span>us</span></h3>
+      <h3>contacte<span>nos</span></h3>
       <div class="contact-grid">
         <div class="col-md-6 contactdetails-grid">
-          <h4>contact form</h4>
-          <h5>name <span>*</span></h5>
+          <h4>forma de contactar</h4>
+          <h5>nombre <span>*</span></h5>
           <input type="text">
-          <h5>email address <span>*</span></h5>
+          <h5>dirección de correo <span>*</span></h5>
+          <input type="email">
+          <h5>asunto <span>*</span></h5>
           <input type="text">
-          <h5>subject <span>*</span></h5>
-          <input type="text">
-          <h5>message <span>*</span></h5>
+          <h5>mensaje <span>*</span></h5>
           <textarea> </textarea>
-          <input type="button" value="send">
+          <input type="button" value="enviar">
         </div>
         <div class="col-md-6 contactdetails-grid1">
           <div class="address">
-            <h4>Address</h4>
-            <p>500 Lorem Ipsum Dolor Sit,</p>
-            <p>22-56-2-9 Sit Amet, Lorem,</p>
-            <p>USA</p>
-            <p>Phone:(00) 222 666 444</p>
-            <p>Fax: (000) 000 00 00 0</p>
-            <p>Email: <a href="mailto:example@mail.com">info@mycompany.com</a></p>
-            <p>Follow on: <a href="#">Facebook</a> , <a href="#">Twitter</a></p>
+            <h4>Dirección</h4>
+            <p>Calle Bitiri , #58</p>
+            <p>Entre Aguilera y Taino, Santiago de Cuba</p>
+            <p>Cuba</p>
+            <p>teléfono:(00) 222 666 444</p>
+            <p>Correo: <a href="mailto:example@mail.com">info@mycompany.com</a></p>
+            <p>Síganos en: <a href="#">Facebook</a> , <a href="#">Twitter</a></p>
           </div>
           <div class="google-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3021.0814617966994!2d-73.96467908332265!3d40.782223218920294!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2589a018531e3%3A0xb9df1f7387a94119!2sCentral+Park!5e0!3m2!1sen!2sin!4v1420805667126"></iframe>
@@ -415,7 +364,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p> Copyright &copy;2015 All rights Reserved | Design by<a href="http://w3layouts.com" target="target_blank">W3Layouts</a></p>
+      <p> Copyright &copy;2020 All rights Reserved | Realizado pot Altech   </p>
     </div>
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
   </div>
